<resources>
    <string name="app_name">Wasta</string>
    <string name="title_activity_add_service">Add Service</string>
    <string name="service_name">Service Name</string>
    <string name="service_details">Service Details</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="facebook">Facebook</string>
    <string name="upload_personal_picture">Upload Personal Picture</string>
    <string name="upload_personal_id">Upload Personal ID</string>
    <string name="add">Add</string>
    <string name="report_problem">Report Problem</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="new_user">New user?</string>
    <string name="sign_up"> Sign Up</string>
    <string name="googlelogo">googleLogo</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">log in</string>
    <string name="log_in_with_google">Log in with google</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="username">User Name</string>
    <string name="email">Email Address</string>
    <string name="Password">Password</string>
    <string name="re_Password">Retype Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="Address">Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignUpwith">Sign Up with</string>
    <string name="Service1">Sevice 1</string>
    <string name="ServiceDetails1">Service Details 1</string>
    <string name="ServiceRating">Service Rating</string>
    <string name="Comments">Comments</string>
    <string name="ContactInf">Contact Information</string>
    <string name="WriteYourPhoneNumberHere">Write Your Phone Number Here</string>
    <string name="ServicePic">Service Pictures</string>
    <string name="ServiceSearch">Search For Service</string>
    <string name="wasta_for_easier_services_exchange">Wasta..For easier services exchange</string>
    <string name="description">description</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="facebook_account">Facebook Account</string>
    <string name="phone">phone</string>
    <string name="user_name">user name</string>
    <string name="services_saved">services saved</string>
    <string name="information">Information :</string>


</resources>
