<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/wasta2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorSecondaryText"
                android:textSize="40sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryText">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:src="@drawable/user" />
                </FrameLayout>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryText">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:src="@drawable/emailicon" />
                </FrameLayout>

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryText">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:src="@drawable/passwordicon" />
                </FrameLayout>

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:background="@color/colorPrimaryLight"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryText">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:src="@drawable/repasswordicon" />
                </FrameLayout>

                <EditText
                    android:id="@+id/again"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"
                    android:hint="@string/re_Password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textColorHint="@color/colorText"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryText">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/phoneicon"
                        android:padding="16dp"/>
                </FrameLayout>
                <EditText
                    android:id="@+id/mob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"
                    android:padding="16dp"
                    android:hint="@string/phonenumber"
                    android:textColorHint="@color/colorText"
                    android:textSize="20sp"
                    android:inputType="number"
                    android:textColor="@color/colorText"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorSecondaryText"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/addressicon"
                        android:padding="16dp"/>
                </FrameLayout>
                <EditText
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"
                    android:padding="16dp"
                    android:hint="@string/Address"
                    android:textColorHint="@color/colorText"
                    android:textSize="20sp"
                    android:singleLine="true"
                    android:inputType="text"
                    android:textColor="@color/colorText"
                    android:layout_marginRight="5dp"
                    />
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorText"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/gpsmappng" />
                </FrameLayout>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryLight"
                    android:padding="16dp"
                    android:text="@string/SignUp"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="@color/colorSecondaryText"
                    android:singleLine="true"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SignUpwith"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorSecondaryText"
                    android:singleLine="true"
                    android:paddingEnd="16dp"
                    android:layout_gravity="center"/>
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/facebookicon"
                    android:layout_weight="1"
                    android:paddingEnd="16dp"
                    />
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/googleicon"
                    android:layout_weight="1"
                    android:paddingRight="16dp"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>



